2layer_gcnii_uncertaingcn.723669.err
  File "main.py", line 170
    names, counts = zip(*result.items()))
                                        ^
SyntaxError: invalid syntax
DeprecationWarning: 'source deactivate' is deprecated. Use 'conda deactivate'.
